--- a/src/nationalarchives/variables/_colour.scss
+++ b/src/nationalarchives/variables/_colour.scss
@@ -37,8 +37,10 @@ $tna-yellow: $-tna-yellow;
 $tna-pink: $-tna-pink;
 $tna-orange: $-tna-orange;
 $tna-green: $-tna-green;
+$tna-forest: $-tna-forest;
 $tna-blue: $-tna-blue;
 $tna-cream: $-tna-cream;
+$tna-white: $-tna-white;
 
 /*
 =========================================
